trustfall_core/test_data/tests/valid_queries/alias_driven_output_names.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Zero {
        zero: value @output

        succ_: successor {
            value @output
        }
    }
}"#,
    arguments: {},
)
