trustfall_core/test_data/tests/parse_errors/duplicate_optional.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output

        out_Directory_ContainsFile @optional @optional {
            file: name @output
        }
    }
}"#,
    arguments: {},
)
